# Katie

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  Katie.sln  README.md
Katie/: Katie.cmake  Katie.vcxproj  Katie.vcxproj.filters
Katie/src/: Katie.h  config_app.h  ktpch.cpp  ktpch.h
Katie/src/Katie/: Application.cpp  Application.h  EntryPoint.h
Katie/src/Katie/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h
Katie/src/Katie/Log/: Log.cpp  Log.h
Katie/src/Katie/RunTimeGUI/: GUI.cpp  GUI.h
Sandbox/: Sandbox.cmake  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/script/: test.py
Sandbox/src/: Sandbox.cpp
cmake/: config_app.h.cmake
